# Bookmarks_Parser

./: .gitignore  LICENSE  README.md  bookmarks_file_structure.md  bookmarks_parser.py  json_structure.md  netscape_structure.md  pyproject.toml  requirements.txt  todo.md
.github/workflows/: push_to_dev.yml  verify_build.yml
Bookmarks_Parser/: (helper)_import_json_as_object_recursively.py  bookmarks_parser.py  bookmarks_parser_iteration.py  models.py  node.py  node_(not_needed_delete_later).py  testing.py
data/: from_chrome_html.json  from_chrome_json.db  from_chrome_json.html  from_firefox_html.json  from_firefox_json.db  test.7z
old model/version_1/: bookmarks_parser_html2db.py  bookmarks_parser_html2json(iteration).py  bookmarks_parser_html2json(recursion).py  format_bookmark_html.py
old model/version_2/: bookmarks_parser_class.py
old model/version_3/: bookmarks_parser_iteration.py  models.py
src/: (helper)_import_json_as_object_recursively.py  bookmarks_converter.py  bookmarks_parser.py  bookmarks_parser_iteration.py  models.py
src/bookmarks_converter/: core.py  models.py
test/: test bookmarks.7z
tests/: conftest.py  test_Bookmark.py  test_HTMLBookmark.py  test_JSONBookmark.py  test_NodeMixin.py  test_bookmarks_converter.py  test_bookmarks_parser.py  test_converter.py
tests/data/: bookmarks_chrome.db  bookmarks_firefox.db  bookmarks_firefox.html  test bookmarks (bookmarks_parser_iteration).7z
