[tool.poetry]
name = "bookmarks-converter"
version = "0.1.0"
description = "Parse db/html/json bookmarks file from (Chrome - Firefox - Custom source) and convert it to db/html/json format."
authors = ["Adam Saleh"]
license = "MIT"
packages = [
    { include = "bookmarks_converter", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.9.3"
SQLAlchemy = "^1.3.19"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
pytest = "^6.1.1"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
