[tool.poetry]
name = "bookmarks-converter"
version = "0.1.0"
description = "Parse db/html/json bookmarks file from (Chrome - Firefox - Custom source) and convert it to db/html/json format."
authors = ["Adam Saleh <radam9@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/radam9/bookmarks_parser"
repository = "https://github.com/radam9/bookmarks_parser"
packages = [
    { include = "bookmarks_converter", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.6"
beautifulsoup4 = "^4.9.3"
SQLAlchemy = "^1.3.19"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
pytest = "^6.1.1"
black = "^20.8b1"
pytest-cov = "^2.11.1"
pytest-mock = "^3.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
